--- a/src/components/CatalogCard/style.css
+++ b/src/components/CatalogCard/style.css
@@ -1,25 +1,74 @@
-.dsc-catalog-card-top {
-    display: flex;
-    justify-content: center;
-    padding: 10px;
+#cart-container-section {
+    padding: 20px 0;
 }
 
-.dsc-catalog-card-top img {
-    width: 150px;
-    height: 150px;
-}
-
-.dsc-catalog-card-bottom {
+.dsc-cart-total-container {
     padding: 10px 20px;
-    min-height: 110px;
 }
 
-.dsc-catalog-card-bottom h3 {
+.dsc-cart-total-container h3 {
+    text-align: left;
+    font-size: 16px;
     color: var(--dsc-color-font-secondary);
-    font-size: 20px;
 }
 
-.dsc-catalog-card-bottom h4 {
-    color: var(--dsc-color-font-primary);
+.dsc-cart-item-container {
+    padding: 0 20px;
+    display: flex;
+    flex-direction: column;
+}
+
+.dsc-cart-item-container img {
+    width: 78px;
+    height: 78px;
+}
+
+.dsc-cart-item-left {
+    display: flex;
+}
+
+.dsc-cart-item-quantity-container {
+    font-size: 16px;
+    font-weight: 700;
+    display: flex;
+}
+
+.dsc-cart-item-right {
+    padding-bottom: 10px;
     font-size: 12px;
+    font-weight: 700;
+    color: var(--dsc-color-font-secondary);
+}
+
+.dsc-cart-item-description {
+    padding: 10px 0;
+    color: var(--dsc-color-font-primary);
+}
+
+.dsc-cart-item-description h3 {
+    font-size: 12px;
+}
+
+.dsc-cart-item-quantity-btn {
+    color: var(--dsc-color-btn-primary);
+    cursor: pointer;
+}
+
+.dsc-cart-item-quantity-container p {
+    margin: 0 5px;
+}
+
+@media (min-width: 576px) {
+    .dsc-cart-item-container {
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+    .dsc-cart-item-right {
+        padding-top: 10px;
+    }
+
+    .dsc-cart-total-container h3 {
+        text-align: right;
+    }
 }
