--- a/src/routes/CartPage/style.css
+++ b/src/routes/CartPage/style.css
@@ -2,6 +2,13 @@
     padding: 20px 0;
 }
 
+.message-cart h2 {
+    color: var(--dsc-color-font-primary);
+}
+
+.dsc-cart-total-container {
+    color: var(--dsc-color-font-secondary);
+}
 
 @media (min-width: 576px) {
     .dsc-cart-item-container {
