--- a/src/routes/CartPage/style.css
+++ b/src/routes/CartPage/style.css
@@ -10,6 +10,10 @@
     color: var(--dsc-color-font-secondary);
 }
 
+.dsc-cart-item-quantity-btn {
+    user-select: none;
+}
+
 @media (min-width: 576px) {
     .dsc-cart-item-container {
         flex-direction: row;
